force-app/main/default/objects/Document_Checklist__c/Document_Checklist__c.object-meta.xml
<CustomObject>
    <description>Tracks documents required or submitted for an Opportunity or Case (intake and exit documents).</description>
    <label>Document Checklist</label>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>Document Checklist Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>