force-app/main/default/objects/Document_Checklist__c/fields/Booking_Verification_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Booking_Verification_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this Document Checklist item to its parent Booking Verification Checklist when generated via BV template.</description>
    <label>Booking Verification Checklist</label>
    <referenceTo>Booking_Verification_Checklist__c</referenceTo>
    <relationshipLabel>Document Checklist Items</relationshipLabel>
    <relationshipName>Document_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>