force-app/main/default/objects/Document_Checklist__c/fields/Bypass_Justification__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Justification__c</fullName>
    <description>Mandatory written justification when Bypass_Requirement__c is checked. Enforced by the Require_Justification_When_Bypassed validation rule.</description>
    <label>Bypass Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>