force-app/main/default/objects/Document_Checklist__c/fields/Bypass_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked by the assigned user, allows this Document Checklist to be marked Final without a Submitted Date or attachment. Requires Bypass_Justification__c to be populated. The change to this field is itself field-history tracked, giving a timestamped audit trail of when a bypass was invoked.</description>
    <label>Bypass Requirement</label>
    <type>Checkbox</type>
</CustomField>