force-app/main/default/objects/Document_Checklist__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case this checklist item relates to.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Document Checklists</relationshipLabel>
    <relationshipName>Document_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>