force-app/main/default/objects/Document_Checklist__c/fields/Case_Creation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Case_Creation_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this Document Checklist to the Case Creation Rule that triggered its creation. Used by Case_Creation_Trigger_Flow to identify which rule a checklist belongs to when evaluating Phase 2 case creation.</description>
    <label>Case Creation Rule</label>
    <referenceTo>Case_Creation_Rule__c</referenceTo>
    <relationshipLabel>Document Checklists</relationshipLabel>
    <relationshipName>Document_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>