force-app/main/default/objects/Document_Checklist__c/fields/Doc_Category__c.field-meta.xml
<CustomField>
    <fullName>Doc_Category__c</fullName>
    <description>High-level document category. Controls the Doc_Type__c dependent picklist. Global-value-set-backed replacement for Document_Category__c.</description>
    <label>Document Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Category</valueSetName>
    </valueSet>
</CustomField>