force-app/main/default/objects/Document_Checklist__c/fields/Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Doc_Type__c</fullName>
    <description
  >Document type, dependent on Doc_Category__c. Global-value-set-backed replacement for the legacy Document Type field on this object.</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Doc_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Document_Type</valueSetName>
    </valueSet>
</CustomField>