force-app/main/default/objects/Document_Checklist__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <description>Specific document type within the selected Document Category.</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Document_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFP (Request for Proposal)</fullName>
            </value>
            <value>
                <fullName>RFQ (Request for Quotation)</fullName>
            </value>
            <value>
                <fullName>RFI (Request for Information)</fullName>
            </value>
            <value>
                <fullName>Portal Submission Credentials</fullName>
            </value>
            <value>
                <fullName>Bid Response Package</fullName>
            </value>
            <value>
                <fullName>Business Problem Statement</fullName>
            </value>
            <value>
                <fullName>Solution Assessment</fullName>
            </value>
            <value>
                <fullName>Technical Scoping Form</fullName>
            </value>
            <value>
                <fullName>DRMS Scoping Form</fullName>
            </value>
            <value>
                <fullName>Scanning Questionnaire</fullName>
            </value>
            <value>
                <fullName>Inventory List</fullName>
            </value>
            <value>
                <fullName>Asset Condition Report</fullName>
            </value>
            <value>
                <fullName>Media Format List</fullName>
            </value>
            <value>
                <fullName>Environmental Requirements Document</fullName>
            </value>
            <value>
                <fullName>Restoration Scope</fullName>
            </value>
            <value>
                <fullName>Site Logistics / Floor Plan</fullName>
            </value>
            <value>
                <fullName>Preliminary SOW Draft</fullName>
            </value>
            <value>
                <fullName>Complexity Assessment</fullName>
            </value>
            <value>
                <fullName>Media Sample Analysis Data</fullName>
            </value>
            <value>
                <fullName>Service Frequency Schedule</fullName>
            </value>
            <value>
                <fullName>Revenue Share Model</fullName>
            </value>
            <value>
                <fullName>Standardized SOW Template</fullName>
            </value>
            <value>
                <fullName>Technical SOW (Final)</fullName>
            </value>
            <value>
                <fullName>SOW Exhibit</fullName>
            </value>
            <value>
                <fullName>DRMS Scope Form / SOW</fullName>
            </value>
            <value>
                <fullName>Standard SOW (Auto-generated)</fullName>
            </value>
            <value>
                <fullName>Executed Contract / SOW</fullName>
            </value>
            <value>
                <fullName>PA Model (Profitability Analysis)</fullName>
            </value>
            <value>
                <fullName>Manual PA Model</fullName>
            </value>
            <value>
                <fullName>Large Deal Model (LDM)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>