force-app/main/default/objects/Document_Checklist__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Target date for document submission.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>