force-app/main/default/objects/Document_Checklist__c/fields/IsRequired__c.field-meta.xml
<CustomField>
    <fullName>IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this document is mandatory before the Case/Opportunity can advance.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>