force-app/main/default/objects/Document_Checklist__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current approval state of the document item.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>Archived/Do Not Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>