force-app/main/default/objects/Document_Checklist__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Date document was first submitted (Draft).</description>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>