force-app/main/default/objects/Document_Checklist__c/validationRules/Prevent_Approval_Without_Submission.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Approval_Without_Submission</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Final&quot;), ISBLANK(Submitted_Date__c), NOT(Bypass_Requirement__c))</errorConditionFormula>
    <errorMessage>Submitted Date must be populated before a document can be marked Final, unless Bypass Requirement is checked.</errorMessage>
</ValidationRule>