force-app/main/default/objects/Document_Checklist__c/validationRules/Require_Justification_When_Bypassed.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Justification_When_Bypassed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Bypass_Requirement__c, ISBLANK(Bypass_Justification__c))</errorConditionFormula>
    <errorMessage>A written justification is required in Bypass Justification when Bypass Requirement is checked.</errorMessage>
</ValidationRule>