force-app/main/default/objects/Document_Checklist__c/validationRules/Require_Notes_On_Rejection.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Notes_On_Rejection</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Archived/Do Not Use&quot;), ISBLANK(Notes__c))</errorConditionFormula>
    <errorMessage>A reason is required in the Notes field when Status = Archived/Do Not Use.</errorMessage>
</ValidationRule>