force-app/main/default/objects/Document_Checklist__c/validationRules/Require_Opportunity_Or_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Opportunity_Or_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Opportunity__c), ISBLANK(Case__c))</errorConditionFormula>
    <errorMessage>A Document Checklist item must be linked to either an Opportunity or a Case (or both).</errorMessage>
</ValidationRule>