force-app/main/default/objects/Document_Checklist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Category__c</columns>
    <columns>DocumentType__c</columns>
    <columns>Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Case__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>IsRequired__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>